<package>
  <version> 0.0.0 </version>
  <name> rviz_plugins </name>
  <description>

    Additional plugins for RViz

  </description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>multi_map_server</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>multi_map_server</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
